<resources>

    <plurals name="reviews_count">
        <item quantity="zero">No reviews</item>
        <item quantity="one">%1$d review</item>
        <item quantity="other">%1$d reviews</item>
    </plurals>

    <string name="back">back</string>
    <string name="confirm">confirm</string>
    <string name="open_category">open_category</string>
    <string name="open_dish">open_dish</string>
    <string name="meal_image">meal image</string>
    <string name="meal_title">meal title</string>
    <string name="author">Comment\'s author</string>
    <string name="dish_description">Dish description</string>
    <string name="your_rating">Your rating (1–5)</string>
    <string name="your_comment">Your comment</string>
    <string name="comment_hint">Write your thoughts…</string>
    <string name="comment">Comment</string>
    <string name="example_price">Example price</string>
    <string name="open_dish_type">Open dish type</string>
    <string name="add_comment_btn">Comment</string>
    <string name="dish_price">Dish price</string>
    <string name="dish_title">Dish title</string>
    <string name="reviews">reviews</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="date">14/10/2025, 14:37</string>
    <string name="comment_text">Comment text\n</string>
    <string name="dish_image">Dish_image</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="dish_nav_error">Error while navigating to the dish</string>
    <string name="data_loading">Data still loading</string>
    <string name="no_kitchen_found">No kitchen found</string>
    <string name="no_dish_types_found">No dish types found</string>
    <string name="insert_comment">Please write a comment</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="update_comment_title">Update comment?</string>
    <string name="add_comment_title">Add comment?</string>
    <string name="update_comment_message">You already commented on this dish. Do you want to update your comment?</string>
    <string name="add_comment_message">Are you sure you want to add this comment?</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="comment_updated">Comment updated</string>
    <string name="comment_added">Comment added</string>
    <string name="delete_comment_title">Delete your comment?</string>
    <string name="delete_comment_message">This will remove your comment for this dish.</string>
    <string name="dish_price_display">Price: %1$.0f₪</string>
    <string name="no_dish_type">No dish type found</string>
    <string name="no_dishes">No dishes found</string>
    <string name="app_logo">No dishes found</string>
    <string name="edit_comment">Edit Review</string>
    <string name="add_comment">Add Review</string>
    <string name="user_menu">User Menu</string>
    <string name="error_required">Required</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_password_short">Password must be at least 6 characters</string>
    <string name="registration_failed">Registration failed</string>
    <string name="welcome_message">Welcome!</string>
    <string name="user_data_not_found">User data not found</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_hi_user">Hi, %1$s</string>
    <string name="dialog_sign_out_title">Sign out</string>
    <string name="dialog_sign_out_msg">Do you want to sign out?</string>
    <string name="error_loading_profile">Error loading profile: %1$s</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_failed">Login failed</string>
    <string name="no_user_id">No user ID found</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="user_not_found">User data not found</string>
    <string name="nice_to_meet_you">Nice to meet you!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="description_sign_up_button">description_sign_up_button</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="description_login_button">description_login_button</string>
    <string name="dialog_sign_in_title">Login Required </string>
    <string name="dialog_sign_in_text">You must be logged in to add or update a comment.</string>
    <string name="dialog_add_comment_text">Are you sure you want to add this comment?</string>
    <string name="no_internet_error">No Internet Connection. Please try again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_favorites">Your list is empty  </string>
    <string name="remove_from_favorites">remove_from_favorites\n</string>
    <string name="add_to_favorites">add_to_favorite\n</string>
    <string name="speak_now">Speak now</string>
    <string name="speech_to_text_not_supported">Speech to text not supported</string>
    <string name="api_no_categories_found">No categories found from API</string>
    <string name="api_no_meal_details">Failed to load meal details</string>
    <string name="removed_from_favorites">%1$s removed from favorites</string>
    <string name="added_to_favorites">%1$s removed from favorites</string>
    <string name="signIn">Sign In</string>


</resources>