<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add_comment.AddCommentFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dish_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_title"/>

        <TextView
            android:id="@+id/dish_desc"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dish_description"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/your_rating"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:isIndicator="false"/>

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/your_comment"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="top|start"
            android:background="@android:color/transparent"
            android:hint="@string/comment_hint"
            android:padding="8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/comment_button_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/submit_button"
                style="@style/Widget.Material3.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/primary_buttons"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>